--- a/arch/arm64/boot/dts/qcom/xiaomi/beryllium/beryllium-p0.dtsi
+++ b/arch/arm64/boot/dts/qcom/xiaomi/beryllium/beryllium-p0.dtsi
@@ -889,7 +889,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&pm8998_adc_tm ADC_XO_THERM_PU2>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		wake-capable-sensor;
 
 		trips {
@@ -905,7 +905,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&pm8998_adc_tm ADC_AMUX_THM1_PU2>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		wake-capable-sensor;
 
 		trips {
@@ -921,7 +921,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&pm8998_adc_tm ADC_AMUX_THM2_PU2>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		wake-capable-sensor;
 
 		trips {
@@ -937,7 +937,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&pm8998_adc_tm ADC_AMUX_THM3_PU2>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		wake-capable-sensor;
 
 		trips {
@@ -953,7 +953,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&pm8998_adc_tm ADC_AMUX_THM4_PU2>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		wake-capable-sensor;
 
 		trips {
@@ -969,7 +969,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&pm8998_adc_tm ADC_AMUX_THM5_PU2>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		wake-capable-sensor;
 
 		trips {
@@ -985,7 +985,7 @@
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&pm8998_adc_tm ADC_GPIO1_PU2>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		wake-capable-sensor;
 
 		trips {
