--- a/drivers/input/fingerprint/fpc_tee/Makefile
+++ b/drivers/input/fingerprint/fpc_tee/Makefile
@@ -1,5 +1,7 @@
+ifndef CONFIG_ARCH_SDM845
 ifeq ($(CONFIG_BOARD_ALIOTH), y)
 obj-$(CONFIG_FINGERPRINT_FPC_TEE) += fpc1020_tee_alioth.o
 else
 obj-$(CONFIG_FINGERPRINT_FPC_TEE) += fpc1020_tee.o
+endif
 endif
